# NanoCalibur

./: .gitignore  LLM.md  README.md  agent.md  mkdocs.yml  project_compiler.py  prompt_1.txt  prompt_2.txt  pyproject.toml
docs/: api.md  blank-excalibur-tutorial.md  blank-web-canvas-tutorial.md  concepts.md  dsl-reference.md  index.md  llm-quick-reference.md  quickstart.md  runtime-sessions.md
examples/: build_web_scene.py  scene.py  scene_assets.py  scene_controls.py  scene_entities.py  scene_roles.py  scene_rules.py  scene_shared.py  scene_world.py
examples/scene/: README.md  assets.py  controls.py  entities.py  main.py  monolithic.py  roles.py  rules.py  shared.py  world.py
examples/starcraft_clone/: README.md  assets.py  combat.py  constants.py  controls.py  data.py  economy.py  main.py  production.py  roles.py  (+4 more)
nanocalibur/: __init__.py  build_game.py  build_web_scene.py  codeblocks.py  compiler.py  dsl_markers.py  errors.py  exporter.py  game_model.py  ir.py  mcp_bridge.py  project_compiler.py  project_compiler_ast.py  project_compiler_values.py  schema_registry.py  ts_generator.py  typesys.py
nanocalibur-demo/: .gitignore  README.generated.md  index.html  package-lock.json  package.json  scene.py  webpack.config.js
tests/: test_animation_and_assets.py  test_canvas_physics.py  test_compiler.py  test_exporter.py  test_headless_http.py  test_headless_symbolic.py  test_mcp_bridge.py  test_project_compiler.py  test_public_api.py  test_runtime_e2e.py  test_runtime_input_phases.py  test_session_runtime.py  test_ts_generator.py  test_typesys.py  test_web_example.py
(+65 files in other folders)
