[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanocalibur"
version = "0.1.0"
description = "Deterministic Python DSL compiler for Excalibur-style game logic"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
